Fixed center alignment issues with margin auto on parent div

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
 /* website content  */
 .container {
     height: 90%;
-    width: 100%;
+    width: auto;
     background-color: white;
     position: absolute;
     overflow-y: scroll;
@@ -136,13 +136,13 @@ a {
 /* for projects */
 .projects {
     width: 100%;
-    height: max-content;
+    height: auto;
     display: flex;
     justify-content: center;
 }
 .projects-header {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     color:#282745;
@@ -165,8 +165,13 @@ a {
     width: 100%;
     height: 100%;
 }
-
-
+.projects-display {
+    width: 100%;
+    height: auto;
+}
+.projects {
+    margin: auto;
+}
 /* loading screen */
 #preloader {
     position: fixed;
@@ -316,14 +321,17 @@ input {
 
 /* Medias! */
 
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 320px and down) */
 @media only screen and (min-width: 320px) and (max-width: 598px) {
     body {
         display: flex;
         justify-content: center;
+        align-content: center;
+        padding: 0%;
     }
     .container {
         margin-top: 5%;
+        padding: 0%;
     }
     .row {
         margin-top: 10%;
@@ -341,6 +349,9 @@ input {
         animation: none;
     }
     .projects {
+        margin: auto;
+    }
+    .projects {
         position: sticky;
         background-color: white;
         display: flex;
@@ -348,17 +359,10 @@ input {
         width: 100%;
     }
     .projects-header {
-        width: 90%;
-        margin-left: 5%;
+        width: 100%;
     }
-    
+
 }
-/* for resizing the project columns at extra small screen size */
-/* @media all and (min-width: 320px) and (max-width: 598px) {
-        .col-xs > .col-sm-6 {
-            width: 100%!important;
-        }
-} */
 
 /* Small devices (portrait tablets and large phones, 600px and until Medium) */
 @media only screen and (min-width: 600px)  and (max-width: 767.98px) {
